hard-gists/4619865/run.log
=== Docker Run Log for 4619865 ===
Started at: Mi 29. Okt 14:55:03 CET 2025

[2025-10-29 14:55:03] START: Running container for 4619865
[2025-10-29 14:55:04] SUCCESS: Container 389a8009d3eb1b311e881a74e89e0e75748ab9092743e96f008607cbaf239fc3 started for 4619865
=== Container logs for 4619865 ===
  File "/snippet.py", line 68
    print 'TTL:', TTL, 'is not valid'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4619865 ===
[2025-10-29 14:55:06] INFO: Container 389a8009d3eb1b311e881a74e89e0e75748ab9092743e96f008607cbaf239fc3 has stopped
